--- a/lightencard/main.html
+++ b/lightencard/main.html
@@ -28,7 +28,7 @@
 
         #inputText {
             width: 325px;
-            height: 200px;
+            height: 600px;
             margin-bottom: 20px;
             background-color: rgba(255, 255, 255, 0.5); /* 半透明の白い背景 */
             border: none; /* 枠をなくす */
@@ -61,12 +61,12 @@
             position: absolute;
             top: calc(50% - .5em);
             right: 1rem;
-            color: #fff;
+            color: #ffffff00;
         }
     </style>
 </head>
 <body>
-    <h1>lighten up mind positive</h1>
+    <h3>lighten up mind positive</h3>
 <textarea id="inputText" placeholder="テキストを入力してください" onkeydown="handleKeyPress(event)"></textarea>
 
 <button class="btn--red btn--cubic btn--radius" onclick="saveData()">
