--- a/lightencard/frame.html
+++ b/lightencard/frame.html
@@ -10,8 +10,11 @@
             padding: 0;
             font-family: Arial, sans-serif;
             display: flex;
+            overflow: hidden;
         }
-
+        .content{
+            overflow: hidden;
+        }
         .menu {
             display: flex;
             justify-content: center;
