--- a/lightencard/main.html
+++ b/lightencard/main.html
@@ -19,6 +19,7 @@
             justify-content: center;
             align-items: center;
             color: #fff;
+            overflow: hidden;
         }
 
         h1 {
