--- a/futurecard 0.9.0 json/print2pdf.html
+++ b/futurecard 0.9.0 json/print2pdf.html
@@ -1,84 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON to PDF</title>
-    <!-- Include required libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JSON to Table</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      table-layout: fixed;
+      width: 100%;
+    }
+    td {
+      border: 1px solid rgb(156, 156, 156);
+      padding: 8px;
+    }
+  </style>
 </head>
 <body>
+<h2>Week</h2>
+<table>
+  <tbody id="tableBodyWeek">
+    <!-- Table body will be dynamically populated with JSON data -->
+  </tbody>
+</table>
+<h2>Month</h2>
+<table>
+  <tbody id="tableBodyMonth">
+    <!-- Table body will be dynamically populated with JSON data -->
+  </tbody>
+</table>
+<h2>Quarter</h2>
+<table>
+  <tbody id="tableBodyQuarter">
+    <!-- Table body will be dynamically populated with JSON data -->
+  </tbody>
+</table>
+<button onclick="generatePDF()">印刷プレビュー</button>
 
-    <script>
-        // Sample JSON data
-        const cardData1 = {
-            "title": ["Title1", "Title2", "Title3"],
-            "items": [
-                ["Data1-1", "Data1-2", "Data1-3"],
-                ["Data2-1", "Data2-2", "Data2-3"],
-                // Add more rows as needed
-            ]
-        };
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  // Retrieve JSON data from local storage
+  var jsonDataWeek = localStorage.getItem('cardData1');
+  var jsonDataMonth = localStorage.getItem('cardData2');
+  var jsonDataQuarter = localStorage.getItem('cardData3');
 
-        const cardData2 = {
-            "title": ["TitleA", "TitleB", "TitleC"],
-            "items": [
-                ["DataA-1", "DataA-2", "DataA-3"],
-                ["DataB-1", "DataB-2", "DataB-3"],
-                // Add more rows as needed
-            ]
-        };
+  // Function to create table rows dynamically
+  function createTableRows(data, tableBodyId) {
+    var dataArray = JSON.parse(data);
+    var tableBody = document.getElementById(tableBodyId);
 
-        const cardData3 = {
-            "title": ["TitleX", "TitleY", "TitleZ"],
-            "items": [
-                ["DataX-1", "DataX-2", "DataX-3"],
-                ["DataY-1", "DataY-2", "DataY-3"],
-                // Add more rows as needed
-            ]
-        };
+    var titleRow = document.createElement('tr');
+    var itemsRow = document.createElement('tr');
 
-        // Function to convert JSON data to HTML table
-        function jsonToTable(jsonData) {
-            let table = '<table border="1">';
-            table += '<tr><th>' + jsonData.title.join('</th><th>') + '</th></tr>';
-            for (const row of jsonData.items) {
-                table += '<tr><td>' + row.join('</td><td>') + '</td></tr>';
-            }
-            table += '</table>';
-            return table;
-        }
+    dataArray.forEach(function(data) {
+      // Add Title cell to title row
+      var titleCell = document.createElement('td');
+      titleCell.textContent = data.title;
+      titleRow.appendChild(titleCell);
 
-        // Function to convert HTML to PDF
-        function htmlToPdf(html) {
-            const pdf = new jsPDF();
-            pdf.fromHTML(html, 15, 15);
-            pdf.save('output.pdf');
-        }
+      // Add Items cell to items row
+      var itemsCell = document.createElement('td');
+      itemsCell.innerHTML = data.items.join('<br>');
+      itemsRow.appendChild(itemsCell);
+    });
 
-        // Handle button click for cardData1
-        document.getElementById('btnCardData1').addEventListener('click', function() {
-            const htmlTable = jsonToTable(cardData1);
-            htmlToPdf(htmlTable);
-        });
+    // Append the title and items rows to the table body
+    tableBody.appendChild(titleRow);
+    tableBody.appendChild(itemsRow);
+  }
 
-        // Handle button click for cardData2
-        document.getElementById('btnCardData2').addEventListener('click', function() {
-            const htmlTable = jsonToTable(cardData2);
-            htmlToPdf(htmlTable);
-        });
+  // Populate Week table
+  if (jsonDataWeek !== null) {
+    createTableRows(jsonDataWeek, 'tableBodyWeek');
+  } else {
+    console.error('Week JSON data not found in local storage.');
+  }
 
-        // Handle button click for cardData3
-        document.getElementById('btnCardData3').addEventListener('click', function() {
-            const htmlTable = jsonToTable(cardData3);
-            htmlToPdf(htmlTable);
-        });
-    </script>
+  // Populate Month table
+  if (jsonDataMonth !== null) {
+    createTableRows(jsonDataMonth, 'tableBodyMonth');
+  } else {
+    console.error('Month JSON data not found in local storage.');
+  }
 
-    <!-- Buttons to trigger PDF generation -->
-    <button id="btnCardData1">Generate PDF for cardData1</button>
-    <button id="btnCardData2">Generate PDF for cardData2</button>
-    <button id="btnCardData3">Generate PDF for cardData3</button>
+  // Populate Quarter table
+  if (jsonDataQuarter !== null) {
+    createTableRows(jsonDataQuarter, 'tableBodyQuarter');
+  } else {
+    console.error('Quarter JSON data not found in local storage.');
+  }
+});
+
+function generatePDF() {
+  // Create a new PDF document
+  var pdf = new jsPDF();
+
+  // Iterate through tables and add them to the PDF
+  var tables = document.querySelectorAll('table');
+  var yOffset = 20;
+
+  tables.forEach(function(table, index) {
+    var canvas = document.createElement('canvas');
+    canvas.width = table.offsetWidth;
+    canvas.height = table.offsetHeight;
+    var context = canvas.getContext('2d');
+
+    // Draw the table content on the canvas
+    context.fillStyle = '#ffffff';
+    context.fillRect(0, 0, canvas.width, canvas.height);
+    context.font = '12px Arial';
+    context.fillStyle = '#000000';
+
+    // Draw each cell of the table on the canvas
+    var cells = table.querySelectorAll('td');
+    var cellHeight = 20; // Adjust as needed
+    cells.forEach(function(cell, cellIndex) {
+      context.fillText(cell.textContent, cell.offsetLeft + 5, cell.offsetTop + cellHeight);
+    });
+
+    // Add the canvas as an image to the PDF
+    pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 20, yOffset, canvas.width / 4, canvas.height / 4);
+
+    // Adjust the yOffset for the next table
+    yOffset += canvas.height / 4 + 10;
+    
+    // Add a new page for the next table
+    if (index < tables.length - 1) {
+      pdf.addPage();
+    }
+  });
+
+  // Save the PDF
+  pdf.save('output.pdf');
+}
+</script>
 
 </body>
 </html>
