--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <p><a href="https://plzsayyes3.github.io/braindump/lightencard/frame.html" target="_blank">Lump</a></p>
 <p><a href="https://plzsayyes3.github.io/braindump/futurecard_text/cdv-home.html" target="_blank">Future Crad</a></p>
+<p><a href="https://plzsayyes3.github.io/braindump/web-textedit/index.html" target="_blank">Future Crad</a></p>
 
 </body>
 </html>
