--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-ワークスプレイス
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>次のページへのリンク</title>
+</head>
+<body>
+
 <p><a href="https://plzsayyes3.github.io/braindump/lightencard/frame.html" target="_blank">Lump</a></p>
 <p><a href="https://plzsayyes3.github.io/braindump/futurecard_text/cdv-home.html" target="_blank">Future Crad</a></p>
-<p><a href="https://plzsayyes3.github.io/braindump/web-textedit/index.html" target="_blank">Future Crad</a></p>
+<p><a href="https://plzsayyes3.github.io/braindump/web-textedit/index.html" target="_blank">禅</a></p>
 
 </body>
 </html>
